--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@ boost_adaptbx/boost/command_line/show_environ_usage.py svneol=native#text/x-pyth
 boost_adaptbx/boost/std_pair.py -text
 boost_adaptbx/std_pair_conversion.h -text
 boost_adaptbx/std_pair_ext.cpp -text
+boost_adaptbx/std_pair_instantiation.h -text
 boost_adaptbx/tst_std_pair.py -text
 cbflib_adaptbx/SConscript -text
 cbflib_adaptbx/detectors/boost_python/SConscript -text
