--- a/.gitattributes
+++ b/.gitattributes
@@ -33,6 +33,7 @@ gltbx/wx_viewer_example.py -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
 iotbx/include/iotbx/pdb/tst_rna_dna_atom_names.py -text
+iotbx/include/iotbx/pdb/utils.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/utils.h svneol=native#text/plain
 iotbx/iotbx/command_line/pdb.print_sequence.py -text
 iotbx/iotbx/detectors/cbf.py -text
