--- a/iotbx/include/iotbx/pdb/SConscript
+++ b/iotbx/include/iotbx/pdb/SConscript
@@ -1,15 +1,33 @@
-Import("env_etc")
+Import("env_base", "env_etc")
+
+env = env_base.Copy(
+  CCFLAGS=env_etc.ccflags_base,
+  SHCCFLAGS=env_etc.ccflags_base,
+  CXXFLAGS=env_etc.cxxflags_base,
+  SHCXXFLAGS=env_etc.cxxflags_base,
+  SHLINKFLAGS=env_etc.shlinkflags,
+)
+env_etc.include_registry.append(
+  env=env,
+  paths=env_etc.iotbx_common_includes)
+if (env_etc.static_libraries): builder = env.StaticLibrary
+else:                          builder = env.SharedLibrary
+builder(
+  target="#lib/iotbx_pdb",
+  source=[
+    "hybrid_36_c.c",
+    "utils.cpp"])
+
 if (not env_etc.no_boost_python):
   Import("env_iotbx_boost_python_ext")
   env = env_iotbx_boost_python_ext.Copy()
   env.Append(LIBPATH=["#lib"])
-  env.Prepend(LIBS=["cctbx", "scitbx_boost_python"])
+  env.Prepend(LIBS=["iotbx_pdb", "cctbx", "scitbx_boost_python"])
   env.SharedLibrary(
     target="#lib/iotbx_pdb_ext",
     source=[
       "ext.cpp",
       "hybrid_36_bpl.cpp",
-      "hybrid_36_c.c",
       "common_residue_names_bpl.cpp",
       "rna_dna_atom_names_bpl.cpp",
       "hierarchy_bpl.cpp",
