--- a/.gitattributes
+++ b/.gitattributes
@@ -107,6 +107,8 @@ smtbx/SConscript -text
 smtbx/__init__.py -text
 smtbx/ab_initio/__init__.py -text
 smtbx/ab_initio/charge_flipping.py -text
+smtbx/ab_initio/command_line/__init__.py -text
+smtbx/ab_initio/command_line/charge_flipping.py -text
 smtbx/ab_initio/tests/tst_charge_flipping.py -text
 smtbx/import_cctbx.h -text
 smtbx/import_scitbx_af.h -text
