- solve the issue on IRIX the Ralf's way (after all this platform will be dropped at some point and then all the xxx_fwd.h can be removed) - include std_pair_fwd.h and optional_fwd.h at the beginning of flex_fwd.h so that code already including the latter can profit of the former two. - needed to add boost_adaptbx to the include's directory for iotbx

--- a/iotbx/SConscript
+++ b/iotbx/SConscript
@@ -10,6 +10,7 @@ env_etc.iotbx_common_includes = [
   env_etc.cctbx_include,
   env_etc.scitbx_include,
   env_etc.boost_include,
+  env_etc.boost_adaptbx_include,
   env_etc.ccp4io_include,
 ]
 
