--- a/.gitattributes
+++ b/.gitattributes
@@ -36,6 +36,7 @@ iotbx/include/iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
 iotbx/include/iotbx/pdb/tst_rna_dna_atom_names.py -text
 iotbx/include/iotbx/pdb/utils.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/utils.h svneol=native#text/plain
+iotbx/iotbx/command_line/pdb.b_factor_stats.py svneol=native#text/x-python
 iotbx/iotbx/command_line/pdb.print_sequence.py -text
 iotbx/iotbx/detectors/cbf.py -text
 iotbx/iotbx/pdb/Hy36.java svneol=native#text/plain
