--- a/.gitattributes
+++ b/.gitattributes
@@ -59,6 +59,7 @@ libtbx/libtbx_refresh.py -text
 libtbx/windows_dispatcher.exe -text
 mmtbx/alignment.h svneol=native#text/plain
 mmtbx/alignment_ext.cpp svneol=native#text/plain
+mmtbx/mmtbx/bulk_solvent/tst_bulk_solvent_and_scaling.py -text
 mmtbx/mmtbx/command_line/cif_as_mtz.py -text
 mmtbx/mmtbx/command_line/maps.py -text
 mmtbx/mmtbx/command_line/pdbtools.py -text
