- add islice - rewrite all iterators with generators - add tests

--- a/.gitattributes
+++ b/.gitattributes
@@ -54,6 +54,7 @@ libtbx/libtbx/command_line/tcsh.sh -text
 libtbx/libtbx/object_oriented_patterns.py -text
 libtbx/libtbx/sourceforge_checkout.py -text
 libtbx/libtbx/subversion.py -text
+libtbx/libtbx/tst_itertbx.py -text
 libtbx/libtbx/tst_object_oriented_patterns.py -text
 libtbx/libtbx_refresh.py -text
 libtbx/windows_dispatcher.exe -text
