--- a/.gitattributes
+++ b/.gitattributes
@@ -109,10 +109,14 @@ scitbx/scitbx/sparse/boost_python/vector.cpp -text
 scitbx/scitbx/sparse/tests/tst_sparse.py -text
 smtbx/SConscript -text
 smtbx/__init__.py -text
+smtbx/ab_initio/SConscript -text
 smtbx/ab_initio/__init__.py -text
+smtbx/ab_initio/ab_initio_ext.cpp -text
+smtbx/ab_initio/charge_flipping.h -text
 smtbx/ab_initio/charge_flipping.py -text
 smtbx/ab_initio/command_line/__init__.py -text
 smtbx/ab_initio/command_line/charge_flipping.py -text
+smtbx/ab_initio/tests/tst_ab_initio_ext.py -text
 smtbx/ab_initio/tests/tst_charge_flipping.py -text
 smtbx/import_cctbx.h -text
 smtbx/import_scitbx_af.h -text
