--- a/smtbx/SConscript
+++ b/smtbx/SConscript
@@ -33,4 +33,5 @@ if (not env_etc.no_boost_python):
   Export("env_smtbx_boost_python_ext")
 
   SConscript("refinement/SConscript")
+  SConscript("ab_initio/SConscript")
 
