--- a/.gitattributes
+++ b/.gitattributes
@@ -44,6 +44,7 @@ iotbx/iotbx/pdb/extract_rfactors_resolutions_sigma.py -text
 iotbx/iotbx/pdb/tst_extract_rfactors_resolutions_sigma.py -text
 iotbx/iotbx/shelx/fcf.py -text
 libtbx/libtbx/assert_utils.py -text
+libtbx/libtbx/command_line/assert_line_count.py svneol=native#text/x-python
 libtbx/libtbx/command_line/bash.sh -text
 libtbx/libtbx/command_line/csh.sh -text
 libtbx/libtbx/command_line/find_files.py -text
