--- a/boost_adaptbx/SConscript
+++ b/boost_adaptbx/SConscript
@@ -145,6 +145,7 @@ if (not env_etc.no_boost_python):
       expected_md5_hexdigests=[
         "c7a3dd81bf730635146f5c908ac982eb", # svn revision 39065M
         "d40aac0029bcd28f6e205ae3b30a1284", # svn revision 40216
+        "b79f016d3ec10cf1625a9e006e605428", # svn revision 40714
       ])
     if (env_etc.compiler in ["irix_CC", "tru64_cxx"]):
       disabled = "#"
@@ -192,7 +193,7 @@ docstring
 pytype_function
 bienstman4
 bienstman5
-test_builtin_converters,builtin_converters,test_builtin_converters
+test_builtin_converters,builtin_converters_ext,test_builtin_converters
 cltree,cltree,test_cltree
 m1,m1,newtest
 m2,m2,newtest
