- move the tests to a separate file and put into place a structure making it easy to add new test cases and to select one from the command line - reduce the amount of work to keep the running time reasonably low - rewrite of the smp module itself: object-oriented with a finer modularity, the Apache trick of pre-spawning a bunch of children and then making each of them sequentially work on a series of tasks in parallel with the other children (instead of spawning, putting to work and quitting one child for each task).

--- a/.gitattributes
+++ b/.gitattributes
@@ -68,6 +68,7 @@ libtbx/libtbx/subversion.py -text
 libtbx/libtbx/symmetric_multi_processing.py -text
 libtbx/libtbx/tst_itertbx.py -text
 libtbx/libtbx/tst_object_oriented_patterns.py -text
+libtbx/libtbx/tst_symmetric_multi_processing.py -text
 libtbx/libtbx_refresh.py -text
 libtbx/windows_dispatcher.exe -text
 mmtbx/alignment.h svneol=native#text/plain
