- inject an iterator 'ltr' over the centring translation into sgtbx.space_group - add a Boost.Python wrapping for the sgtbx/select_generators gear and a simpler Python interface to sgtbx/__init__.py - add to class space_group_info: 	+ a method returning the set of generators (cached) 	+ a method to determine whether a fractional shift is an allowed origin shift up to some tolerance to class sp - comprehensive tests

--- a/cctbx/sgtbx/boost_python/SConscript
+++ b/cctbx/sgtbx/boost_python/SConscript
@@ -21,4 +21,5 @@ env.SharedLibrary(target="#lib/cctbx_sgtbx_ext", source=[
   "tensor_rank_2.cpp",
   "tr_vec.cpp",
   "wyckoff.cpp",
+  "select_generators.cpp"
 ])
