--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@ boost_adaptbx/optional_fwd.h -text
 boost_adaptbx/std_pair_conversion.h -text
 boost_adaptbx/std_pair_ext.cpp -text
 boost_adaptbx/std_pair_fwd.h -text
+boost_adaptbx/tst_libc_backtrace.py svneol=native#text/x-python
 boost_adaptbx/tst_std_pair.py -text
 cbflib_adaptbx/SConscript -text
 cbflib_adaptbx/detectors/boost_python/SConscript -text
