--- a/.gitattributes
+++ b/.gitattributes
@@ -59,6 +59,7 @@ libtbx/libtbx/command_line/extract_code_from_txt.py svneol=native#text/x-python
 libtbx/libtbx/command_line/find_files.py -text
 libtbx/libtbx/command_line/list_files.py -text
 libtbx/libtbx/command_line/nequal.py -text
+libtbx/libtbx/command_line/sge_qstat_counts.py svneol=native#text/x-python
 libtbx/libtbx/command_line/sh.sh -text
 libtbx/libtbx/command_line/show_environ_usage.py svneol=native#text/x-python
 libtbx/libtbx/command_line/tcsh.sh -text
