Class crystal_orientation represents the basis set of a primitive lattice oriented in orthonormal laboratory space.

--- a/cctbx/boost_python/SConscript
+++ b/cctbx/boost_python/SConscript
@@ -4,3 +4,6 @@ env.Prepend(LIBS=["cctbx"])
 env.SharedLibrary(target="#lib/cctbx_emma_ext", source=[
   "emma_ext.cpp",
 ])
+env.SharedLibrary(target="#lib/cctbx_orientation_ext", source=[
+  "orientation_ext.cpp",
+])
