--- a/.gitattributes
+++ b/.gitattributes
@@ -19,7 +19,9 @@ cbflib_adaptbx/include/cbflib_adaptbx/basic.h -text
 cbflib_adaptbx/include/cbflib_adaptbx/cbf_adaptor.h -text
 cbflib_adaptbx/include/cbflib_adaptbx/mar_adaptor.h -text
 cbflib_adaptbx/libtbx_config -text
+cctbx/boost_python/orientation_ext.cpp -text
 cctbx/cctbx/command_line/version.py -text
+cctbx/cctbx/crystal_orientation.py -text
 cctbx/cctbx/regression/random_generator_state.pickle -text
 cctbx/cctbx/regression/structure_ideal.pickle -text
 cctbx/cctbx/regression/structure_start.pickle -text
@@ -29,8 +31,11 @@ cctbx/cctbx/regression/tst_xray_minimization_failure.py -text
 cctbx/cctbx/xray/weighting_schemes.py -text
 cctbx/dox/rst/python_cpp_mix.png -text
 cctbx/global/error.cpp -text
+cctbx/include/cctbx/crystal_orientation.h -text
 cctbx/include/cctbx/maptbx/fft.h -text
 cctbx/sgtbx/boost_python/select_generators.cpp -text
+cctbx/uctbx/boost_python/tst_crystal_orientation.py -text
+cctbx/uctbx/crystal_orientation.cpp -text
 compcomm/newsletter08/default.css -text
 compcomm/newsletter08/f_square_refinement.py -text
 compcomm/newsletter08/news.txt -text
