--- a/cctbx/SConscript
+++ b/cctbx/SConscript
@@ -94,6 +94,7 @@ lib_cctbx_sources = [
 
   "uctbx/uctbx.cpp",
   "uctbx/spoil_optimization.cpp",
+  "uctbx/crystal_orientation.cpp",
 ]
 if (env_etc.static_libraries): builder = envlm.StaticLibrary
 else:                          builder = envlm.SharedLibrary
