--- a/.gitattributes
+++ b/.gitattributes
@@ -93,6 +93,7 @@ mmtbx/mmtbx/monomer_library/tst_protein_interpretation.py -text
 mmtbx/mmtbx/monomer_library/tst_rna_dna_interpretation.py -text
 mmtbx/mmtbx/pdb_header.py -text
 mmtbx/mmtbx/pdbtools.py -text
+mmtbx/mmtbx/refinement/occupancies.py -text
 mmtbx/mmtbx/regression/tst_altloc_chain_break.py -text
 mmtbx/mmtbx/tst_pdbtools.py -text
 mmtbx/mmtbx/utils.py -text
