new phenix.pdb_atom_selection: simple command to test atom selections

--- a/.gitattributes
+++ b/.gitattributes
@@ -85,6 +85,7 @@ mmtbx/alignment_ext.cpp svneol=native#text/plain
 mmtbx/mmtbx/bulk_solvent/tst_bulk_solvent_and_scaling.py -text
 mmtbx/mmtbx/command_line/cif_as_mtz.py -text
 mmtbx/mmtbx/command_line/maps.py -text
+mmtbx/mmtbx/command_line/pdb_atom_selection.py svneol=native#text/x-python
 mmtbx/mmtbx/command_line/pdbtools.py -text
 mmtbx/mmtbx/command_line/xmanip.py -text
 mmtbx/mmtbx/find_peaks.py -text
