--- a/.gitattributes
+++ b/.gitattributes
@@ -57,6 +57,9 @@ iotbx/iotbx/pdb/Hy36.java svneol=native#text/plain
 iotbx/iotbx/pdb/extract_rfactors_resolutions_sigma.py -text
 iotbx/iotbx/pdb/tst_extract_rfactors_resolutions_sigma.py -text
 iotbx/iotbx/shelx/fcf.py -text
+iotbx/iotbx/shelx/lexers.py -text
+iotbx/iotbx/shelx/parser.py -text
+iotbx/iotbx/shelx/tst_read_ins.py -text
 libtbx/libtbx/assert_utils.py -text
 libtbx/libtbx/command_line/assert_line_count.py svneol=native#text/x-python
 libtbx/libtbx/command_line/bash.sh -text
