- move the map viewer to a new hierarchy

--- a/.gitattributes
+++ b/.gitattributes
@@ -41,9 +41,10 @@ compcomm/newsletter08/f_square_refinement.py -text
 compcomm/newsletter08/news.txt -text
 compcomm/newsletter08/notes -text
 compcomm/newsletter08/special_positions.py -text
+crys3d/__init__.py -text
+crys3d/wx_map_viewer.py -text
 gltbx/command_line/pythonw.sh -text
 gltbx/wx_controllers.py -text
-gltbx/wx_map_viewer.py -text
 gltbx/wx_viewer_example.py -text
 gltbx/wx_viewers_images.py -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
