--- a/.gitattributes
+++ b/.gitattributes
@@ -110,6 +110,7 @@ mmtbx/mmtbx/pdb_header.py -text
 mmtbx/mmtbx/pdbtools.py -text
 mmtbx/mmtbx/refinement/occupancies.py -text
 mmtbx/mmtbx/refinement/refinement_flags.py -text
+mmtbx/mmtbx/refinement/tst_refinement_flags.py -text
 mmtbx/mmtbx/regression/tst_altloc_chain_break.py -text
 mmtbx/mmtbx/tst_alignment.py -text
 mmtbx/mmtbx/tst_pdbtools.py -text
