--- a/.gitattributes
+++ b/.gitattributes
@@ -116,6 +116,7 @@ mmtbx/mmtbx/refinement/tst_refinement_flags.py -text
 mmtbx/mmtbx/regression/tst_altloc_chain_break.py -text
 mmtbx/mmtbx/tst_alignment.py -text
 mmtbx/mmtbx/tst_pdbtools.py -text
+mmtbx/mmtbx/tst_utils.py -text
 mmtbx/mmtbx/utils.py -text
 mmtbx/mmtbx/wwpdb/__init__.py -text
 mmtbx/mmtbx/wwpdb/standard_geometry_cif.py -text
