- move to Epydoc 3.0 and take advantage of its new feature: 	a clean way to create external references. - change the path to the created documentation to be inline with the Doxyfile

--- a/cctbx/dox/epydoc.conf
+++ b/cctbx/dox/epydoc.conf
@@ -1,15 +1,15 @@
 [epydoc]
 
+docformat: restructuredtext
+
 output: html
 
-target: ../../htdocs/current/python_with_epydoc
+target: ../../../htdocs/current/python_with_epydoc
 
 name: cctbx
 
 frames: no
 
-modules: cctbx
+modules: libtbx boost_adaptbx scitbx cctbx iotbx mmtbx
 
-#exclude-introspect: start_print_trace
-
-
+exclude-introspect: start_print_trace
