--- a/.gitattributes
+++ b/.gitattributes
@@ -48,6 +48,7 @@ crys3d/wx_map_viewer.py -text
 gltbx/wx_controllers.py -text
 gltbx/wx_viewer_example.py -text
 gltbx/wx_viewers_images.py -text
+iotbx/include/iotbx/pdb/hierarchy.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
 iotbx/include/iotbx/pdb/tst_rna_dna_atom_names.py -text
