--- a/iotbx/include/iotbx/pdb/SConscript
+++ b/iotbx/include/iotbx/pdb/SConscript
@@ -16,7 +16,8 @@ builder(
   target="#lib/iotbx_pdb",
   source=[
     "hybrid_36_c.c",
-    "utils.cpp"])
+    "utils.cpp",
+    "hierarchy.cpp"])
 
 if (not env_etc.no_boost_python):
   Import("env_iotbx_boost_python_ext")
