--- a/.gitattributes
+++ b/.gitattributes
@@ -61,6 +61,7 @@ iotbx/iotbx/command_line/pdb_as_fasta.py svneol=native#text/x-python
 iotbx/iotbx/detectors/cbf.py -text
 iotbx/iotbx/pdb/Hy36.java svneol=native#text/plain
 iotbx/iotbx/pdb/extract_rfactors_resolutions_sigma.py -text
+iotbx/iotbx/pdb/hierarchy.py svneol=native#text/x-python
 iotbx/iotbx/pdb/tst_extract_rfactors_resolutions_sigma.py -text
 iotbx/iotbx/shelx/errors.py -text
 iotbx/iotbx/shelx/fcf.py -text
