step 1c of hierarchy re-design experiment: hierarchy moved to hierarchy_v1, including input::construct_hierarchy_v1(); Python input.construct_hierarchy() preserved for compatibility

--- a/iotbx/include/iotbx/pdb/SConscript
+++ b/iotbx/include/iotbx/pdb/SConscript
@@ -17,7 +17,7 @@ builder(
   source=[
     "hybrid_36_c.c",
     "utils.cpp",
-    "hierarchy.cpp",
+    "hierarchy_v1.cpp",
     "input.cpp"])
 
 if (not env_etc.no_boost_python):
@@ -35,6 +35,6 @@ if (not env_etc.no_boost_python):
       "input_bpl.cpp",
       "xray_structure_bpl.cpp"])
   env.SharedLibrary(
-    target="#lib/iotbx_pdb_hierarchy_ext",
+    target="#lib/iotbx_pdb_hierarchy_v1_ext",
     source=[
-      "hierarchy_ext.cpp"])
+      "hierarchy_v1_ext.cpp"])
