step 2 of hierarchy re-design experiment: complete new data hierarchy (bare bones) in hierarchy_v2 namespace

--- a/.gitattributes
+++ b/.gitattributes
@@ -49,10 +49,14 @@ gltbx/wx_controllers.py -text
 gltbx/wx_viewer_example.py -text
 gltbx/wx_viewers_images.py -text
 iotbx/include/iotbx/pdb/hierarchy_v1.cpp svneol=native#text/plain
+iotbx/include/iotbx/pdb/hierarchy_v2.cpp svneol=native#text/plain
+iotbx/include/iotbx/pdb/hierarchy_v2.h svneol=native#text/plain
+iotbx/include/iotbx/pdb/hierarchy_v2_ext.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/input.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/namespace.h svneol=native#text/plain
 iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
 iotbx/include/iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
+iotbx/include/iotbx/pdb/tst_hierarchy_v2.py svneol=native#text/x-python
 iotbx/include/iotbx/pdb/tst_rna_dna_atom_names.py -text
 iotbx/include/iotbx/pdb/utils.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/utils.h svneol=native#text/plain
@@ -63,6 +67,7 @@ iotbx/iotbx/detectors/cbf.py -text
 iotbx/iotbx/pdb/Hy36.java svneol=native#text/plain
 iotbx/iotbx/pdb/extract_rfactors_resolutions_sigma.py -text
 iotbx/iotbx/pdb/hierarchy_v1.py svneol=native#text/x-python
+iotbx/iotbx/pdb/hierarchy_v2.py svneol=native#text/x-python
 iotbx/iotbx/pdb/tst_extract_rfactors_resolutions_sigma.py -text
 iotbx/iotbx/shelx/errors.py -text
 iotbx/iotbx/shelx/fcf.py -text
