add H atoms to water during refinement

--- a/.gitattributes
+++ b/.gitattributes
@@ -122,6 +122,7 @@ mmtbx/mmtbx/pdbtools.py -text
 mmtbx/mmtbx/refinement/occupancies.py -text
 mmtbx/mmtbx/refinement/refinement_flags.py -text
 mmtbx/mmtbx/refinement/tst_refinement_flags.py -text
+mmtbx/mmtbx/regression/tst_add_h_to_water.py -text
 mmtbx/mmtbx/regression/tst_altloc_chain_break.py -text
 mmtbx/mmtbx/tst_alignment.py -text
 mmtbx/mmtbx/tst_pdbtools.py -text
