--- a/iotbx/include/iotbx/pdb/SConscript
+++ b/iotbx/include/iotbx/pdb/SConscript
@@ -34,6 +34,7 @@ if (not env_etc.no_boost_python):
       "common_residue_names_bpl.cpp",
       "rna_dna_atom_names_bpl.cpp",
       "input_bpl.cpp",
+      "construct_hierarchy_v2.cpp",
       "xray_structure_bpl.cpp"])
   env.SharedLibrary(
     target="#lib/iotbx_pdb_hierarchy_v1_ext",
