fit H-O-H to 2 or 3 peak-shaped residual density; refine occupancy of water only if requested

--- a/mmtbx/SConscript
+++ b/mmtbx/SConscript
@@ -31,3 +31,5 @@ SConscript("bulk_solvent/SConscript")
 SConscript("tls/SConscript")
 SConscript("scaling/SConscript")
 SConscript("f_model/SConscript")
+SConscript("utils/SConscript")
+
