--- a/.gitattributes
+++ b/.gitattributes
@@ -135,6 +135,10 @@ mmtbx/mmtbx/wwpdb/standard_geometry_cif.py -text
 mmtbx/mmtbx/wwpdb/tst_standard_geometry_cif.py -text
 mmtbx/mmtbx/xmanip.py -text
 mmtbx/mmtbx/xmanip_tasks.py -text
+mmtbx/utils/LICENSE.txt -text
+mmtbx/utils/SConscript -text
+mmtbx/utils/utils.h -text
+mmtbx/utils/utils_ext.cpp -text
 scitbx/array_family/boost_python/tst_smart_selection.py svneol=native#text/x-python
 scitbx/array_family/tst_unsigned_float_arithmetic.cpp -text
 scitbx/error/SConscript -text
