--- a/.gitattributes
+++ b/.gitattributes
@@ -55,6 +55,9 @@ iotbx/include/iotbx/pdb/atom_selection.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/construct_hierarchy_v2.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy_v2.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy_v2.h svneol=native#text/plain
+iotbx/include/iotbx/pdb/hierarchy_v2_atoms.cpp svneol=native#text/plain
+iotbx/include/iotbx/pdb/hierarchy_v2_atoms.h svneol=native#text/plain
+iotbx/include/iotbx/pdb/hierarchy_v2_atoms_bpl.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy_v2_ext.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/input.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/namespace.h svneol=native#text/plain
