--- a/.gitattributes
+++ b/.gitattributes
@@ -69,6 +69,7 @@ iotbx/include/iotbx/pdb/tst_rna_dna_atom_names.py -text
 iotbx/include/iotbx/pdb/utils.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/utils.h svneol=native#text/plain
 iotbx/iotbx/command_line/pdb.b_factor_stats.py svneol=native#text/x-python
+iotbx/iotbx/command_line/pdb.join_fragment_files.py svneol=native#text/x-python
 iotbx/iotbx/command_line/pdb.print_sequence.py -text
 iotbx/iotbx/command_line/pdb_as_fasta.py svneol=native#text/x-python
 iotbx/iotbx/detectors/cbf.py -text
