--- a/.gitattributes
+++ b/.gitattributes
@@ -193,6 +193,7 @@ smtbx/ab_initio/charge_flipping.py -text
 smtbx/ab_initio/density_modification.h -text
 smtbx/ab_initio/examples/03srv209.hkl.gz -text
 smtbx/ab_initio/examples/03srv209.res -text
+smtbx/ab_initio/examples/__init__.py -text
 smtbx/ab_initio/examples/solve_shelx.py -text
 smtbx/ab_initio/tests/__init__.py -text
 smtbx/ab_initio/tests/tst_ab_initio_ext.py -text
