--- a/.gitattributes
+++ b/.gitattributes
@@ -162,6 +162,7 @@ scitbx/error/tst_error.cpp -text
 scitbx/error/tst_error.py -text
 scitbx/include/scitbx/error_utils.h -text
 scitbx/include/scitbx/iso_surface.h -text
+scitbx/include/scitbx/math/superpose.h -text
 scitbx/include/scitbx/matrix/delta_tensors.h -text
 scitbx/include/scitbx/misc/positive_getitem_index.h svneol=native#text/plain
 scitbx/include/scitbx/sparse/dfs.h -text
