new root.write_as_pdb_file()

--- a/iotbx/include/iotbx/pdb/SConscript
+++ b/iotbx/include/iotbx/pdb/SConscript
@@ -22,6 +22,7 @@ builder(
     "hierarchy_atoms.cpp",
     "construct_hierarchy.cpp",
     "overall_counts.cpp",
+    "hierarchy_write.cpp",
     "atom_selection.cpp",
     "input.cpp"])
 
