--- a/.gitattributes
+++ b/.gitattributes
@@ -120,6 +120,8 @@ mmtbx/mmtbx/command_line/cif_as_mtz.py -text
 mmtbx/mmtbx/command_line/maps.py -text
 mmtbx/mmtbx/command_line/pdb_atom_selection.py svneol=native#text/x-python
 mmtbx/mmtbx/command_line/pdbtools.py -text
+mmtbx/mmtbx/command_line/ramalyze.py -text
+mmtbx/mmtbx/command_line/rotalyze.py -text
 mmtbx/mmtbx/command_line/xmanip.py -text
 mmtbx/mmtbx/find_peaks.py -text
 mmtbx/mmtbx/hydrogens/find.py -text
@@ -142,10 +144,14 @@ mmtbx/mmtbx/refinement/refinement_flags.py -text
 mmtbx/mmtbx/refinement/tst_refinement_flags.py -text
 mmtbx/mmtbx/regression/tst_add_h_to_water.py -text
 mmtbx/mmtbx/regression/tst_altloc_chain_break.py -text
+mmtbx/mmtbx/rotamer/rotamer_names.props -text
+mmtbx/mmtbx/rotamer/sidechain_angles.props -text
+mmtbx/mmtbx/rotamer/sidechain_angles.py -text
 mmtbx/mmtbx/scaling/absences.py -text
 mmtbx/mmtbx/tst_alignment.py -text
 mmtbx/mmtbx/tst_pdbtools.py -text
 mmtbx/mmtbx/tst_utils.py -text
+mmtbx/mmtbx/tst_validate_utils.py -text
 mmtbx/mmtbx/utils.py -text
 mmtbx/mmtbx/wwpdb/__init__.py -text
 mmtbx/mmtbx/wwpdb/standard_geometry_cif.py -text
